--- a/package.json
+++ b/package.json
@@ -7,11 +7,41 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "husky init",
+    "deploy": "nuxt build && nuxt generate",
+    "lint:fix": "eslint --fix --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@bg-dev/nuxt-naiveui": "^1.10.2",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "^1.3.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "commitlint-config-gitmoji": "^2.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nuxt": "^3.10.2",
+    "nuxt-icon": "^0.6.8",
+    "prettier": "^3.2.5",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,vue}": [
+      "pnpm lint:fix"
+    ]
   }
 }
