:sparkles: post & comment likeing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,8 @@
     "sidebase",
     "tailwindcss",
     "vueuc",
-    "wght"
+    "wght",
+    "dtos"
   ],
   "files.eol": "\n",
   "[typescript]": {
