--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "add": "^2.0.6",
+    "consola": "^3.2.3",
     "pinia": "^2.1.7",
     "web3": "^4.5.0"
   },
@@ -27,6 +28,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "commitlint-config-gitmoji": "^2.3.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
