:recycle: redisegn layout and remove naive-ui

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # REST API configuration
 REST_API_URL=
+SIGNAL_R_URL=
 
 # .NET backend runs locally on HTTPS (must be set to 0), for production must be set to 1
 NODE_TLS_REJECT_UNAUTHORIZED=
