🚀 add option to set host port from env var and change default port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     image: tokengram-frontend
     restart: unless-stopped
     ports:
-      - 3001:3000
+      - ${TOKENGRAM_FRONTEND_HOST_PORT:-6000}:3000
     networks:
       - team07
