--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --fix --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@kodadot1/minipfs": "0.4.3-rc.1",
     "@microsoft/signalr": "^8.0.0",
     "@pinia/nuxt": "^0.5.1",
     "add": "^2.0.6",
@@ -38,6 +39,7 @@
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.8",
     "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
